<resources>
    <string name="app_name">Bot Brawl Stars</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="status_stopped">Status: Stopped</string>
    <string name="status_running">Status: Running</string>
</resources>
